--- a/pom.xml
+++ b/pom.xml
@@ -2,27 +2,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
 
+	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.sunproject.mineboot.installer</groupId>
 	<artifactId>MineBootInstaller</artifactId>
-	<name>MineBootInstaller</name>
-	<url>http://maven.apache.org</url>
-	<version>1.0.1</version>
+	<version>1.0.0</version>
 
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	
-	<distributionManagement>
+	<repositories>
 		<repository>
-			<id>MineBootInstaller</id>
-			<name>MineBootInstaller</name>
-			<url>https://maven.pkg.github.com/sundev79/MinebootInstaller</url>
-			
+			<id>github</id>
+			<name>GitHub sundev79 Apache Maven Packages</name>
+			<url>https://maven.pkg.github.com/sundev79/Sundev79-Maven-Packages</url>
 		</repository>
-	</distributionManagement>
+	</repositories>
 
 	<dependencies>
 		<dependency>
@@ -30,7 +27,6 @@
 			<artifactId>okhttp</artifactId>
 			<version>2.7.5</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.googlecode.json-simple</groupId>
 			<artifactId>json-simple</artifactId>
@@ -40,6 +36,11 @@
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sunproject.sunupdate</groupId>
+			<artifactId>sunupdate</artifactId>
+			<version>1.0.1</version>
 		</dependency>
 	</dependencies>
 	<build>
